@@ -71,6 +71,8 @@ Change log next version
 * Added support for RequestPostProcessor authentication to the Spring Mock MVC module. For example:
      given().auth().with(httpBasic("username", "password")). ..
   where "httpBasic" is statically imported from org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors. This requires that you have "spring-security-test" in your classpath.
+* Added support for RequestPostProcessors to the Spring Mock MVC module, for example:
+    given().postProcessors(myRequestPostProcessor1, myRequestPostProcessor2). ..
 
 
 Change log 2.4.1 (2015-04-12)
